Update README.md to reflect JavaFX transition and enhance setup instructions